--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -112,6 +112,7 @@
     max-width: 70%;
     font-weight: 400;
     line-height: 1.5;
+    margin-top: 5px;
 
     @media (max-width: 768px) {
       max-width: 80%;
